# FINAL-ALDARO

./: .gitignore  AUDIT_FIXES.md  LAUNCH_READINESS.md  PREFLIGHT_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  RECENT_CHANGES.md  SECRETS_TO_ROTATE.md  SECURITY.md  package-lock.json  package.json
.claude/: settings.local.json
apps/cli/: pyproject.toml
apps/cli/aldaro_cli/: main.py
deploy/: Caddyfile  backup.env.example  db-backup.service  db-backup.timer
docs/: ALDARO_ENGINEERING_TEST_HANDOFF_2026-03-11.md  PRODUCTION_RUNBOOK.md  approval-flow-audit.md  billing-invariants.md  billing-parity-evidence-template.md  billing-path-audit.md  cleanup-durability-matrix.md  current-launch-blockers.md  day-1-with-infra-access.md  db-constraint-review.md  error-surface-audit.md  gateway-local-validation.md  go-no-go-evidence-table.md  infra-intake-packet.md  launch-readiness-index.md  local-bootstrap-runbook.md  local-postgres-harness.md  local-proof-postgres-worker-2026-03-12.md  openapi.yaml  operator-cheat-sheet.md  proof-execution-checklist.md  proof-levels.md  restore-drill-2026-03-11.md  staging-bootstrap-runbook.md  staging-env-templates.md  staging-fleet-seed-spec.md  staging-p0-proof-2026-03-11.md  staging-postgres-path.md  staging-preflight-input-checklist.md  worker-failure-matrix.md  worker-risk-audit.md  workspace-lifecycle-state-machine.md
migrations/: 001_init.sql  002_author_portal.sql
scripts/: billing-state-inspection.sql  capture-proof-evidence.sh  db-backup.sh  export-port-leases.js  export-proxmox-tasks.js  export-workspace-sessions.js  run-20x-proof.sh  (+9 more)
(+132 files in other folders)
